--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-serchbar></app-serchbar>
-<app-searchlist></app-searchlist>
+<!-- <app-searchbar></app-searchbar>> -->
+<div class="container" style="margin-top:10px">
+    <router-outlet></router-outlet>
+</div>
