--- a/client/src/app/searchbar/searchbar.component.html
+++ b/client/src/app/searchbar/searchbar.component.html
@@ -16,6 +16,7 @@
                     type="text" 
                     placeholder="Search" 
                     aria-label="Search"
+                    required
                   >
                 </div>
               </div>
@@ -26,61 +27,79 @@
                 </div>
             </div>
         </form>
-        <div *ngIf="isSearchList" class="filter-result">
+
+        <div>
+          <p class="p-position" *ngIf="msgParagraph">Please search something......</p>
+        </div>
+        <div *ngIf="buildings!=null">
+          <div *ngIf="isSearchList" class="filter-result">
+            <p class="p-position">These are the buildings with their name and description(address)</p>
             <div class="job-box d-md-flex align-items-center justify-content-between mb-30 ">
                 <div class="job-left my-4 d-md-flex align-items-center flex-wrap">
-                    <div *ngIf="buildings != null" class="job-content">                                
+                    <div class="job-content">                                
                         <ul  *ngFor="let item of buildings" class="d-md-flex flex-wrap text-capitalize ff-open-sans">
                             <li class="mr-md-4">
-                                <i class="zmdi zmdi-pin mr-2"></i> {{item.name}}
+                                <i class="zmdi zmdi-city mr-2"></i> {{item.name}}
                             </li>
                             <li class="mr-md-4">
-                                <i class="zmdi zmdi-money mr-2"></i> {{item.shortCut}}
-                            </li>
-                            <li class="mr-md-4">
-                                <i class="zmdi zmdi-pin mr-2"></i> {{item.description}}
+                                <i class="zmdi zmdi-comment-outline mr-2"></i> {{item.description}}
                             </li>
                         </ul>
                     </div>
-                  </div>
                 </div>
               </div>
+          </div>
         </div>
-        <div *ngIf="isSearchList"  class="filter-result">
-          <div class="job-box d-md-flex align-items-center justify-content-between mb-30 ">
-              <div class="job-left my-4 d-md-flex align-items-center flex-wrap">  
-                  <div  class="job-content">                                
-                    <ul  *ngFor="let item of locks" class="d-md-flex flex-wrap text-capitalize ff-open-sans">
-                        <li class="mr-md-4">
-                            <i class="zmdi zmdi-pin mr-2"></i> {{item.name}}
+
+        <div *ngIf="locks!=null">
+          <div *ngIf="isSearchList"  class="filter-result">
+            <p class="p-position">These are the locks with their name name and room number</p>
+            <div class="job-box d-md-flex align-items-center justify-content-between mb-30 ">
+                <div class="job-left my-4 d-md-flex align-items-center flex-wrap">  
+                    <div  class="job-content">                                
+                      <ul  *ngFor="let item of locks" class="d-md-flex flex-wrap text-capitalize ff-open-sans">
+                          <li class="mr-md-4">
+                              <i class="zmdi zmdi-lock mr-2"></i> {{item.name}}
+                          </li>
+                          <li class="mr-md-4">
+                            <i class="zmdi zmdi-store mr-2"></i> {{item.roomNumber}}
                         </li>
-                    </ul>
-                  </div>
-              </div>
+                      </ul>
+                    </div>
+                </div>
+            </div>
+          </div>     
+        </div>
+        
+        <div *ngIf="groups!=null">
+          <div *ngIf="isSearchList " class="filter-result">
+            <p class="p-position">These are the groups with name and their description</p>
+            <div class="job-box d-md-flex align-items-center justify-content-between mb-30 ">
+                <div class="job-left my-4 d-md-flex align-items-center flex-wrap">  
+                    <div class="job-content">                                
+                      <ul  *ngFor="let item of groups" class="d-md-flex flex-wrap text-capitalize ff-open-sans">
+                          <li class="mr-md-4">
+                              <i class="zmdi zmdi-group mr-2"></i> {{item.name}}
+                          </li>
+                          <li class="mr-md-4">
+                            <i class="zmdi zmdi-comment-outline mr-2"></i> {{item.description}}
+                        </li>                        
+                      </ul>
+                    </div>
+                </div>
+            </div>
           </div>
         </div>      
 
-        <div *ngIf="isSearchList " class="filter-result">
-          <div class="job-box d-md-flex align-items-center justify-content-between mb-30 ">
-              <div class="job-left my-4 d-md-flex align-items-center flex-wrap">  
-                  <div *ngIf="locks != null" class="job-content">                                
-                    <ul  *ngFor="let item of groups" class="d-md-flex flex-wrap text-capitalize ff-open-sans">
-                        <li class="mr-md-4">
-                            <i class="zmdi zmdi-pin mr-2"></i> {{item.description}}
-                        </li>                        
-                    </ul>
-                  </div>
-              </div>
-          </div>
-        </div>
         <div *ngIf="media!=null">
           <div *ngIf="isSearchList" class="filter-result">
+            <p class="p-position">These are the owners of media</p>
             <div class="job-box d-md-flex align-items-center justify-content-between mb-30 ">
                 <div class="job-left my-4 d-md-flex align-items-center flex-wrap">  
-                    <div *ngIf="locks != null" class="job-content">                                
+                    <div class="job-content">                                
                       <ul  *ngFor="let item of media" class="d-md-flex flex-wrap text-capitalize ff-open-sans">
                           <li class="mr-md-4">
-                              <i class="zmdi zmdi-pin mr-2"></i> {{item.owner}}
+                              <i class="zmdi zmdi-male-female mr-2"></i> {{item.owner}}
                           </li>
                       </ul>
                     </div>
